--- a/static/single.css
+++ b/static/single.css
@@ -526,6 +526,9 @@ article img{
     border-radius: .25em;
     border-radius: var(--radius);
 }
+article p{
+    font-weight: 400;
+}
 
 .post-content, .page-content{ animation: fade-in-top .3s .2s backwards; -webkit-animation: fade-in-top .3s .2s backwards; }
 .post-content, .page-content, .post-near, .post-tags, .post-author{ margin-bottom: 3em }
@@ -535,15 +538,19 @@ article h1, article h2, article h3{
     scroll-margin-top: 5em;
 }
 
-article h2{ font-size: 1.15em }
-article h3{ font-size: 1.10em }
-article h4{ font-size: 1.05em }
-article h5{ font-size: 1em }
-article h6{ font-size: .9em }
+article h1{ font-size: 1.85em; font-weight:bold }
+article h2{ font-size: 1.7em; font-weight:bold }
+article h3{ font-size: 1.55em; font-weight:bold }
+article h4{ font-size: 1.25em; font-weight:bold }
+article h5{ font-size: 1em; font-weight:bold }
+article h6{ font-size: .95em; font-weight:bold }
 
 article h1:before,
 article h2:before,
-article h3:before{
+article h3:before,
+article h4:before,
+article h5:before,
+article h6:before{
     content: "#";
     color: #6f9fc7;
     color: var(--blue);
@@ -755,11 +762,11 @@ article ul p:first-child{
     margin-right: .5em;
 }
 
-.article-list .item-2:before{ content: "-" }
-.article-list .item-3:before{ content: "--" }
-.article-list .item-4:before{ content: "---" }
-.article-list .item-5:before{ content: "----" }
-.article-list .item-6:before{ content: "-----" }
+.article-list .item-2:before { content: "·"; padding-left: 0em; }
+.article-list .item-3:before { content: "·"; padding-left: 1em; }
+.article-list .item-4:before { content: "·"; padding-left: 2em; }
+.article-list .item-5:before { content: "·"; padding-left: 3em; }
+.article-list .item-6:before { content: "·"; padding-left: 4em; }
 
 @media screen and (min-width: 800px){
     body.has-trees{ margin-right: 15em }
