😴 修复黑暗模式下 `blockquote` 不同步主题颜色的问题

--- a/static/single.css
+++ b/static/single.css
@@ -140,7 +140,7 @@ input, textarea, pre, hr, blockquote{
 
 .dark-theme blockquote{
     color: #ddd;
-    border-color: #eb9c26;
+    border-color: var(--theme);
     background-color: rgba(255, 255, 255, .05);
 }
 
